# gallcc

./: .gitignore  CMakeLists.txt  LICENCE  README.md
.github/workflows/: .#main.yml  main.yml
include/: sample.h  test.h  utils.h
src/: main.cpp  sample.cpp  sample.lua  test.cpp  utils.cpp
tests/: run.fnl
